Implementation tests in odoo